- Lua asdoc: added support for events - Lua asdoc: fixed / tweaked doc template - Lua asdoc: documented azIcon - Lua: Created a proper class for menu items
git-svn-id: https://appetizer.googlecode.com/svn@239 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -1557,6 +1557,18 @@
 					</FileConfiguration>
 				</File>
 				<File
+					RelativePath=".\lua_glue\azMenuItem.cpp"
+					>
+					<FileConfiguration
+						Name="Unicode Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							PrecompiledHeaderThrough="../stdafx.h"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
 					RelativePath=".\lua_glue\azOptionButton.cpp"
 					>
 					<FileConfiguration
@@ -2048,6 +2060,10 @@
 				</File>
 				<File
 					RelativePath=".\lua_glue\azMenu.h"
+					>
+				</File>
+				<File
+					RelativePath=".\lua_glue\azMenuItem.h"
 					>
 				</File>
 				<File
