- Started improved tooltips
git-svn-id: https://appetizer.googlecode.com/svn@269 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -630,6 +630,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\ToolTipFrame.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\User.cpp"
 				>
 				<FileConfiguration
@@ -1804,6 +1808,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\ToolTipFrame.h"
+				>
+			</File>
+			<File
 				RelativePath=".\TypeDefinitions.h"
 				>
 			</File>
@@ -1820,6 +1828,10 @@
 				>
 				<File
 					RelativePath=".\bitmap_controls\BitmapControl.h"
+					>
+				</File>
+				<File
+					RelativePath=".\BitmapLabel.h"
 					>
 				</File>
 				<File
