--- a/trunk/Data/Plugins/AddToGroupOnRightClick/plugin.xml
+++ b/trunk/Data/Plugins/AddToGroupOnRightClick/plugin.xml
@@ -2,7 +2,7 @@
 <!-- NOTE: this file and all its settings are optionals. Only main.lua is required -->
 <Plugin version="1.0">
 	<!-- Plugin name -->
-	<Name>"Add to group" menu item</Name>
+	<Name>"Move to group" menu item</Name>
 	<!-- ID to uniquely identify the plugin. New plugins can get a new UUID from http://www.famkruithof.net/uuid/uuidgen (for example) -->
 	<UUID>f86763e0-bee0-11dd-ad8b-0800200c9a66</UUID>
 </Plugin>
