- Greek localization - Turkish localization - Plugin: Started implementing support for preferences
git-svn-id: https://appetizer.googlecode.com/svn@281 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/Data/Plugins/AddToGroupOnRightClick/plugin.xml
+++ b/trunk/Data/Plugins/AddToGroupOnRightClick/plugin.xml
@@ -4,5 +4,5 @@
 	<!-- Plugin name -->
 	<Name>"Move to group" menu item</Name>
 	<!-- ID to uniquely identify the plugin. New plugins can get a new UUID from http://www.famkruithof.net/uuid/uuidgen (for example) -->
-	<UUID>f86763e0-bee0-11dd-ad8b-0800200c9a66</UUID>
+	<UUID>org.etizer.app.plugins.addToGroup</UUID>
 </Plugin>
