--- a/trunk/Data/Plugins/CloseAfterLaunchingAnApp/plugin.xml
+++ b/trunk/Data/Plugins/CloseAfterLaunchingAnApp/plugin.xml
@@ -4,5 +4,5 @@
 	<!-- Plugin name -->
 	<Name>Close Appetizer after launching an app</Name>
 	<!-- ID to uniquely identify the plugin. New plugins can get a new UUID from http://www.famkruithof.net/uuid/uuidgen (for example) -->
-	<UUID>305d5460-c9fb-11dd-ad8b-0800200c9a66</UUID>
+	<UUID>org.etizer.app.plugins.closeAfterLaunch</UUID>
 </Plugin>
