- Help files are now in PDF format instead of CHM - ConfigDialog: Sorted languages by name - Localization: Improved display of "Language (Country)" - Plugin: Fixed memory leak (Preferences weren't being deleted) - Fixed memory leak in Utilities::IsApplicationOnPortableDrive - Fixed normal installer bug, which kept appending "/u" to Arguments.txt on each installation - Split Application and Help file gettext generation
git-svn-id: https://appetizer.googlecode.com/svn@283 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -1667,6 +1667,14 @@
 							PrecompiledHeaderThrough="../stdafx.h"
 						/>
 					</FileConfiguration>
+					<FileConfiguration
+						Name="Unicode Release|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							PrecompiledHeaderThrough="..\stdafx.h"
+						/>
+					</FileConfiguration>
 				</File>
 				<File
 					RelativePath=".\lua_glue\azSystem.cpp"
