- Plugins: Started implementing Preferences dialog
git-svn-id: https://appetizer.googlecode.com/svn@285 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -1313,6 +1313,18 @@
 					</FileConfiguration>
 				</File>
 				<File
+					RelativePath=".\gui\PluginPreferencesDialog.cpp"
+					>
+					<FileConfiguration
+						Name="Unicode Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							PrecompiledHeaderThrough="..\stdafx.h"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
 					RelativePath=".\gui\ShortcutEditorDialog.cpp"
 					>
 					<FileConfiguration
@@ -2032,6 +2044,10 @@
 				</File>
 				<File
 					RelativePath=".\gui\ImportWizardDialog.h"
+					>
+				</File>
+				<File
+					RelativePath=".\gui\PluginPreferencesDialog.h"
 					>
 				</File>
 				<File
