- Plugin: added Application:setSkin and Application:getSkinNames - More work on plugin preference dialog - Added Chinese (Traditional) translation - Plugin: support for options field in Preference
git-svn-id: https://appetizer.googlecode.com/svn@286 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -1323,6 +1323,14 @@
 							PrecompiledHeaderThrough="..\stdafx.h"
 						/>
 					</FileConfiguration>
+					<FileConfiguration
+						Name="Unicode Release|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							PrecompiledHeaderThrough="../stdafx.h"
+						/>
+					</FileConfiguration>
 				</File>
 				<File
 					RelativePath=".\gui\ShortcutEditorDialog.cpp"
