- Fixed bug with "Start on system startup" option when app was installed using PortableApps installer - Fixed bug where app was always starting on system startup even after the option has been unticked - Fixed bug with Appetizer closing procedure (wasn't closing at all anymore, just crashing) - Set default window transparency to 235 (looks nicer) - "Kill locking apps on shutdown" option no longer kills Appetizer and allows it to close properly
git-svn-id: https://appetizer.googlecode.com/svn@307 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -279,7 +279,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="version.lib comctl32.lib rpcrt4.lib winmm.lib advapi32.lib wsock32.lib wxpng.lib wxzlib.lib wxjpeg.lib wxmsw28u_core.lib wxbase28u.lib wxtiff.lib wxmsw28u_adv.lib wxbase28u_net.lib wxregexu.lib psapi.lib c:\lua\lua5.1.lib .\third_party\freetype\objs\win32\vc2008\freetype239MT.lib"
+				AdditionalDependencies="version.lib comctl32.lib rpcrt4.lib winmm.lib advapi32.lib wsock32.lib wxpng.lib wxzlib.lib wxjpeg.lib wxmsw28u_core.lib wxbase28u.lib wxtiff.lib wxmsw28u_adv.lib wxbase28u_net.lib wxregexu.lib psapi.lib .\third_party\lua\objs\win32\lua5.1.lib .\third_party\freetype\objs\win32\vc2008\freetype239MT.lib"
 				OutputFile=".\Appetizer.exe"
 				AdditionalLibraryDirectories="&quot;$(WXWIN)\lib\vc_lib&quot;"
 				IgnoreAllDefaultLibraries="false"
