- Converted functions to use std::string
git-svn-id: https://appetizer.googlecode.com/svn@340 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/branches/QtVersion/Appetizer.vcproj
+++ b/branches/QtVersion/Appetizer.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="application"
+	Name="Appetizer"
 	ProjectGUID="{4D6F89CE-0FBF-374B-B534-B1725AD8AF3F}"
 	Keyword="Qt4VSv1.0"
 	TargetFrameworkVersion="0"
