git-svn-id: https://appetizer.googlecode.com/svn@345 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/branches/QtVersion/Appetizer.vcproj
+++ b/branches/QtVersion/Appetizer.vcproj
@@ -248,6 +248,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\Style.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\User.cpp"
 				>
 			</File>
@@ -395,6 +399,10 @@
 			</File>
 			<File
 				RelativePath=".\stable.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Style.h"
 				>
 			</File>
 			<File
