Converted UserSettings class from wxWidgets
git-svn-id: https://appetizer.googlecode.com/svn@348 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/branches/QtVersion/Appetizer.vcproj
+++ b/branches/QtVersion/Appetizer.vcproj
@@ -255,6 +255,10 @@
 				RelativePath=".\User.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\UserSettings.cpp"
+				>
+			</File>
 			<Filter
 				Name="gui"
 				>
@@ -407,6 +411,10 @@
 			</File>
 			<File
 				RelativePath=".\User.h"
+				>
+			</File>
+			<File
+				RelativePath=".\UserSettings.h"
 				>
 			</File>
 			<Filter
