--- a/branches/QtVersion/Appetizer.vcproj
+++ b/branches/QtVersion/Appetizer.vcproj
@@ -77,7 +77,7 @@
 				IgnoreImportLibrary="true"
 				AdditionalOptions="&quot;/MANIFESTDEPENDENCY:type=&apos;win32&apos; name=&apos;Microsoft.Windows.Common-Controls&apos; version=&apos;6.0.0.0&apos; publicKeyToken=&apos;6595b64144ccf1df&apos; language=&apos;*&apos; processorArchitecture=&apos;*&apos;&quot; &quot;/MANIFESTDEPENDENCY:type=&apos;win32&apos; name=&apos;Microsoft.Windows.Common-Controls&apos; version=&apos;6.0.0.0&apos; publicKeyToken=&apos;6595b64144ccf1df&apos; language=&apos;*&apos; processorArchitecture=&apos;*&apos;&quot;"
 				AdditionalDependencies="c:\Qt\2010.02.1\qt\lib\qtmaind.lib c:\Qt\2010.02.1\qt\lib\QtGuid.lib c:\Qt\2010.02.1\qt\lib\QtCored.lib gdi32.lib comdlg32.lib oleaut32.lib imm32.lib winmm.lib winspool.lib ws2_32.lib ole32.lib user32.lib advapi32.lib msimg32.lib shell32.lib kernel32.lib uuid.lib"
-				OutputFile="debug\application.exe"
+				OutputFile="Appetizer.exe"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories="c:\Qt\2010.02.1\qt\lib,c:\Qt\2010.02.1\qt\lib"
 				IgnoreAllDefaultLibraries="false"
@@ -263,16 +263,8 @@
 				Name="gui"
 				>
 				<File
-					RelativePath=".\gui\FolderItemRenderer.cpp"
+					RelativePath=".\gui\FolderItemSprite.cpp"
 					>
-					<FileConfiguration
-						Name="Debug|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-							PrecompiledHeaderThrough="stable.h"
-						/>
-					</FileConfiguration>
 				</File>
 				<File
 					RelativePath=".\gui\GraphicsItem.cpp"
@@ -289,6 +281,10 @@
 							PrecompiledHeaderThrough="stable.h"
 						/>
 					</FileConfiguration>
+				</File>
+				<File
+					RelativePath=".\gui\IconSprite.cpp"
+					>
 				</File>
 				<File
 					RelativePath=".\gui\MainScene.cpp"
@@ -421,7 +417,7 @@
 				Name="gui"
 				>
 				<File
-					RelativePath=".\gui\FolderItemRenderer.h"
+					RelativePath=".\gui\FolderItemSprite.h"
 					>
 				</File>
 				<File
@@ -430,6 +426,10 @@
 				</File>
 				<File
 					RelativePath=".\gui\IconPanel.h"
+					>
+				</File>
+				<File
+					RelativePath=".\gui\IconSprite.h"
 					>
 				</File>
 				<File
