Added rollover animation on icons and added support for moc generation
git-svn-id: https://appetizer.googlecode.com/svn@351 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/branches/QtVersion/Appetizer.vcproj
+++ b/branches/QtVersion/Appetizer.vcproj
@@ -61,6 +61,7 @@
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="3"
+				ForcedIncludeFiles="stable.h"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -374,6 +375,14 @@
 						</FileConfiguration>
 					</File>
 				</Filter>
+			</Filter>
+			<Filter
+				Name="_moc"
+				>
+				<File
+					RelativePath=".\gui\moc_GraphicsItem.cpp"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
