Done MOC generation using SH. Started creating of frameless window with custom shape
git-svn-id: https://appetizer.googlecode.com/svn@353 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/branches/QtVersion/Appetizer.vcproj
+++ b/branches/QtVersion/Appetizer.vcproj
@@ -288,6 +288,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\gui\MainPanel.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\gui\MainScene.cpp"
 					>
 				</File>
@@ -439,6 +443,10 @@
 				</File>
 				<File
 					RelativePath=".\gui\IconSprite.h"
+					>
+				</File>
+				<File
+					RelativePath=".\gui\MainPanel.h"
 					>
 				</File>
 				<File
