Trying to get mask to work, and created create_moc.sh script to generate moc files
git-svn-id: https://appetizer.googlecode.com/svn@354 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/branches/QtVersion/Appetizer.vcproj
+++ b/branches/QtVersion/Appetizer.vcproj
@@ -61,7 +61,7 @@
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="3"
-				ForcedIncludeFiles="stable.h"
+				ForcedIncludeFiles=""
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -384,7 +384,7 @@
 				Name="_moc"
 				>
 				<File
-					RelativePath=".\gui\moc_GraphicsItem.cpp"
+					RelativePath=".\moc\moc_GraphicsItem.cpp"
 					>
 				</File>
 			</Filter>
