Implemented resizing of main window
git-svn-id: https://appetizer.googlecode.com/svn@357 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/branches/QtVersion/Appetizer.vcproj
+++ b/branches/QtVersion/Appetizer.vcproj
@@ -387,6 +387,10 @@
 					RelativePath=".\moc\moc_GraphicsItem.cpp"
 					>
 				</File>
+				<File
+					RelativePath=".\moc\moc_MainWindow.cpp"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
