Implemented signals and slots on GraphicsItem
git-svn-id: https://appetizer.googlecode.com/svn@358 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/branches/QtVersion/Appetizer.vcproj
+++ b/branches/QtVersion/Appetizer.vcproj
@@ -388,6 +388,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\moc\moc_MainScene.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\moc\moc_MainWindow.cpp"
 					>
 				</File>
