Icons are now loaded in a separate thread so as to keep the interface responsive when there are many icons to load (especially on USB drives).
git-svn-id: https://appetizer.googlecode.com/svn@362 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/branches/QtVersion/Appetizer.vcproj
+++ b/branches/QtVersion/Appetizer.vcproj
@@ -223,6 +223,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\GetIconThread.cpp"
+				>
+			</File>
+			<File
 				RelativePath="main.cpp"
 				>
 				<FileConfiguration
@@ -380,7 +384,15 @@
 				Name="_moc"
 				>
 				<File
+					RelativePath=".\moc\moc_FolderItem.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\moc\moc_GraphicsItem.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\moc\moc_IconSprite.cpp"
 					>
 				</File>
 				<File
@@ -412,6 +424,10 @@
 			</File>
 			<File
 				RelativePath=".\FolderItem.h"
+				>
+			</File>
+			<File
+				RelativePath=".\GetIconThread.h"
 				>
 			</File>
 			<File
