Implemented class to resolve special variables $(Drive), etc. and improved retrieving of file icons.
git-svn-id: https://appetizer.googlecode.com/svn@363 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/branches/QtVersion/Appetizer.vcproj
+++ b/branches/QtVersion/Appetizer.vcproj
@@ -240,6 +240,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\PathVariables.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\stable.cpp"
 				>
 				<FileConfiguration
@@ -428,6 +432,10 @@
 			</File>
 			<File
 				RelativePath=".\GetIconThread.h"
+				>
+			</File>
+			<File
+				RelativePath=".\PathVariables.h"
 				>
 			</File>
 			<File
