Started support of tabs
git-svn-id: https://appetizer.googlecode.com/svn@364 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/branches/QtVersion/Appetizer.vcproj
+++ b/branches/QtVersion/Appetizer.vcproj
@@ -307,6 +307,10 @@
 					RelativePath=".\gui\NineSliceItem.cpp"
 					>
 				</File>
+				<File
+					RelativePath=".\gui\TabSprite.cpp"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="utils"
@@ -483,6 +487,10 @@
 				</File>
 				<File
 					RelativePath=".\gui\NineSliceItem.h"
+					>
+				</File>
+				<File
+					RelativePath=".\gui\TabSprite.h"
 					>
 				</File>
 			</Filter>
