Changed FolderItem type enum so that it doesn't generate any warning
git-svn-id: https://appetizer.googlecode.com/svn@367 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/branches/QtVersion/Appetizer.vcproj
+++ b/branches/QtVersion/Appetizer.vcproj
@@ -404,11 +404,19 @@
 					>
 				</File>
 				<File
+					RelativePath=".\moc\moc_MainPanel.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\moc\moc_MainScene.cpp"
 					>
 				</File>
 				<File
 					RelativePath=".\moc\moc_MainWindow.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\moc\moc_TabSprite.cpp"
 					>
 				</File>
 			</Filter>
