--- a/branches/QtVersion/Appetizer.vcproj
+++ b/branches/QtVersion/Appetizer.vcproj
@@ -308,6 +308,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\gui\ScrollBar.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\gui\TabSprite.cpp"
 					>
 				</File>
@@ -491,6 +495,10 @@
 				</File>
 				<File
 					RelativePath=".\gui\NineSliceItem.h"
+					>
+				</File>
+				<File
+					RelativePath=".\gui\ScrollBar.h"
 					>
 				</File>
 				<File
