Done scrollbar control
git-svn-id: https://appetizer.googlecode.com/svn@375 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/branches/QtVersion/Appetizer.vcproj
+++ b/branches/QtVersion/Appetizer.vcproj
@@ -419,6 +419,10 @@
 					RelativePath=".\moc\moc_MainWindow.cpp"
 					>
 				</File>
+				<File
+					RelativePath=".\moc\moc_ScrollBar.cpp"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
