Finished scrollable icon panel
git-svn-id: https://appetizer.googlecode.com/svn@376 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/branches/QtVersion/Appetizer.vcproj
+++ b/branches/QtVersion/Appetizer.vcproj
@@ -312,6 +312,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\gui\ScrollPane.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\gui\TabSprite.cpp"
 					>
 				</File>
@@ -423,6 +427,10 @@
 					RelativePath=".\moc\moc_ScrollBar.cpp"
 					>
 				</File>
+				<File
+					RelativePath=".\moc\moc_ScrollPane.cpp"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
@@ -503,6 +511,10 @@
 				</File>
 				<File
 					RelativePath=".\gui\ScrollBar.h"
+					>
+				</File>
+				<File
+					RelativePath=".\gui\ScrollPane.h"
 					>
 				</File>
 				<File
